--- a/app/templates_for_new_theme/carts/checkout_view.html
+++ b/app/templates_for_new_theme/carts/checkout_view.html
@@ -62,13 +62,23 @@
             <br/>
 
             <form id="checkout" method='POST' action="{% url 'checkout_final' %}">{% csrf_token %}
+                <script
+                    class="paynet-button"
+                    type="text/javascript"
+                    src="https://pts-pj.paynet.com.tr/public/js/paynet.min.js"
+                    data-key="pbk_pcs_TipCY8rx00hQAICpfn2lR52H9cyTa3sV"
+                    data-amount="{{ order.order_total }}"
+                    data-ratio_code="oran kodunuz var ise"
+                    data-button_label="Ödeme Yap"
+                    data-image="[image_url]">
+                </script>
                 <!-- <input type='hidden' name='payment_token' value='ABC' /> -->
-                <div id="payment-form"></div>
-                <p><b>
-                    <button type='submit'>Complete Order</button>
-                </b>
-
-                </p>
+{#                <div id="payment-form"></div>#}
+{#                <p><b>#}
+{#                    <button type='submit'>Complete Order</button>#}
+{#                </b>#}
+{##}
+{#                </p>#}
             </form>
 
 
