--- a/app/templates_for_new_theme/__base.html
+++ b/app/templates_for_new_theme/__base.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% block title %}
-        <title>İştebu! | Yaşamınızı Kolaylaştırır </title>
-    {% endblock %}
+
+    <title>{% block title %} İştebu! | Yaşamınızı Kolaylaştırır {% endblock %}</title>
 
     {% include '_head_css.html' %}
 
